--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "apollo-server": "^3.7.0",
     "apollo-server-core": "^3.7.0",
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^1.30.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-graphql": "^0.12.0",
     "graphql": "^16.5.0",
     "graphql-subscriptions": "^2.0.0",
+    "graphql-upload": "^13.0.0",
     "graphql-ws": "^5.8.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.3",
