forgot password functionality using nodemailer

--- a/.env
+++ b/.env
@@ -1,3 +1,15 @@
 DB_URI=mongodb+srv://user:user@cluster0.sc5qx.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
 
 JWT_SECRET=ffagod777
+
+API_URL=http://localhost:7777
+
+
+
+SMTP_PASSWORD=mfyN6KShUxzhZ8WactZD
+
+SMTP_HOST=smtp.mail.ru
+
+SMTP_PORT=465
+
+SMTP_USER=babinmih@mail.ru
