--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "express": "^4.18.1",
     "express-graphql": "^0.12.0",
     "graphql": "^16.5.0",
+    "graphql-constraint-directive": "^3.1.0",
     "graphql-subscriptions": "^2.0.0",
     "graphql-upload": "^13.0.0",
     "graphql-ws": "^5.8.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.3",
+    "nodemailer": "^6.7.5",
     "ws": "^8.6.0"
   },
   "devDependencies": {
