--- a/.env
+++ b/.env
@@ -4,6 +4,8 @@ JWT_SECRET=ffagod777
 
 API_URL=http://localhost:7777
 
+CLIENT=https://iridescent-lily-dd5cb1.netlify.app
+
 
 
 SMTP_PASSWORD=mfyN6KShUxzhZ8WactZD
